продолжаю изменять изменения - поменял таблички, продолжил прикручивать шаблоны, поправил сохранение профиля пользователя, и добрался до формы редактирования статьи

--- a/templates/create_author.html
+++ b/templates/create_author.html
@@ -4,6 +4,11 @@
   
 	<div class="col-md-9">
 	  <div id="generalTabContent" class="tab-content">
+
+		{% if error %}
+		<span style="color: red">{{_("Error")}}: {{ error }}</span><p>
+		{% end %}
+ 	  
 	      <div id="tab-edit" class="tab-pane fade in active">
 	          <form action="/auth/create" method="POST" class="form-horizontal"><h3>{{_("Account Setting")}}</h3>
 	
