--- a/templates/compose.html
+++ b/templates/compose.html
@@ -2,62 +2,110 @@
 
 {% block body %}
 <script src="{{ static_url("js/ckeditor/ckeditor.js") }}"></script>
-    </head>
-  <form action="{{ request.path }}" method="post" class="compose">
-    <div style="margin-bottom:5px"><input name="article_title" type="text" class="article_title" value="{{ article.article_title if article else "" }}"/></div>
-    <div style="margin-bottom:5px">
-    <textarea name="article_annotation" rows="3" cols="80" class="article_annotation">{{ article.article_annotation if article else "" }}</textarea>
+
+  <div class="panel panel-blue" style="background:#fff;">
+           <div class="panel-body pan">
+				<form action="{{ request.path }}" method="post">
+               <div class="form-body pal">
+                   <div class="form-group">
+                       <label for="inputName" class="control-label">{{ _("Article Name") }}</label>
+                       <div class="input-icon right">
+                           <i class="fa fa-font"></i>
+                           <input class="form-control" name="title" type="text" placeholder=" {{ _("Article Name") }}" value="{{ article.article_title if article else "" }}"/>
+                           </div>
+                   </div>
+                   
+                   <div class="form-group">
+                       <label for="inputMessage" class="control-label">{{ _("Article Annotation") }}</label>
+                           <textarea name="annotation" rows="3" class="form-control">{{ article.article_annotation if article else "" }}</textarea>
+                   </div>
+
+                   <div class="form-group">
+                       <label for="inputText" class="control-label">{{ _("Article Text") }}</label>
+                       <textarea name="sourse" id="sourse" rows="20" class="form-control">{{ article.article_sourse if article else "" }}</textarea>
+			            <script>
+				            CKEDITOR.replace( 'sourse' );
+				        </script>
+                   </div>
+
+<div class="row">
+
+    <div class="col-md-4">
+        <div class="form-group">
+                       <label for="inputSubject" class="control-label">{{ _("Visibility Rules") }}</label>
+            <select class="form-control" name="permissions">
+                <option {% if article.article_permissions == 'pbl' %} selected="selected" {% end %} value="pbl"> {{_("Public")}}</option>
+                <option {% if article.article_permissions == 'grp' %} selected="selected" {% end %} value="grp"> {{_("Group")}}</option>
+                <option {% if article.article_permissions == 'sol' %} selected="selected" {% end %} value="sol"> {{_("Solo")}}</option>
+            </select></div>
     </div>
-    
-    <div style="margin-bottom:5px">
-    <textarea name="article_sourse" rows="30" cols="80" class="article_sourse">{{ article.article_sourse if article else "" }}</textarea>
-            <script>
-            CKEDITOR.replace( 'article_sourse' );
-        </script>
-    
+    <div class="col-md-4">
+        <div class="form-group" id="selector2template">
+        	<img src="/static/images/loading31.gif" alt="" class="img-responsive"/>
+       </div>
     </div>
-    <div>
-      <input type="submit" value="{{ _("Save changes") }}" class="submit"/>
-      &nbsp;<a href="/articles">{{ _("Cancel") }}</a>
-    {% if article %}
+    <div class="col-md-4">
+        <div class="form-group"id="selector2category">
+            <img src="/static/images/loading31.gif" alt="" class="img-responsive"/>
+       </div>
+    </div>
+</div>
+               </div>
+               <div class="form-actions text-right pal">
+                   <button type="submit" class="btn btn-primary">{{ _('Save changes') }}</button>
+                   &nbsp;<a href="/personal_desk_top" class="btn btn-primary">{{ _("Cancel") }}</a>
+               </div>
+
+    {% if article.article_id > 0 %}
       &nbsp;<a href="/upload/{{ article.article_id  if article else 0 }}">{{ _("Upload") }}</a>
     {% end %}
     </div>
-    {% if article %}
       <input type="hidden" name="id" value="{{ article.article_id }}"/>
-    {% end %}
-      <input type="hidden" name="category_article_id" value="{{ article.category_article_id }}"/>
     {% module xsrf_form_html() %}
-  </form>
-<br>  
-  <div class="body"> 
 
   {% module FilesList( fileList) %}
-  
-</div>    
-  
+
+               </form>
+           </div>
+       </div>
+       <br><br><br><br><br>
 {% end %}
 
 
 {% block bottom %}
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="{{ static_url("js/jquery-3.1.0.min.js") }}"></script>
+        <script>
+	        // Load data asynchronously.
+	            
+		$(document).ready(function(){
+	        $.ajax({url: "/rest/getArticleTemplateList/{{article.article_template_id}}?label=Temllates list&selector=template_id", success: function(result){
+	            $("#selector2template").html(result);
+	        }});
+	        $.ajax({url: "/rest/getArticleCategoryList/{{article.article_category_id}}?label=Article Category&selector=category_id", success: function(result){
+	            $("#selector2category").html(result);
+	        }});
+			        
+			});
+	        
+        </script>
+  
   <script type="text/javascript">
   //<![CDATA[
 
-    $(function() {
-      $("input[name=article_title]").select();
-      $("form.compose").submit(function() {
-          var required = ["article_title", "article_sourse"];
-          var form = $(this).get(0);
-          for (var i = 0; i < required.length; i++) {
-              if (!form[required[i]].value) {
-                  $(form[required[i]]).select();
-                  return false;
-              }
-          }
-          return true;
-      });
-    });
+//    $(function() {
+//    $("input[name=article_title]").select();
+//      $("form.compose").submit(function() {
+//          var required = ["article_title", "article_sourse"];
+//          var form = $(this).get(0);
+//          for (var i = 0; i < required.length; i++) {
+//              if (!form[required[i]].value) {
+//                  $(form[required[i]]).select();
+//                  return false;
+//              }
+//          }
+//          return true;
+//      });
+////    });
 
   //]]>
   </script>
