чуть - чуть поправил внешний вид и внутреннеее содержание - редактора статей и персонального рабочего стола

--- a/templates/rest/articles_list.html
+++ b/templates/rest/articles_list.html
@@ -19,9 +19,9 @@
   {% for article in articles %}
 			
 			 <tr>
-			     <td><a href="admin/article/{{ article.article_id }}">{{ article.article_title }}</a></td>
+			     <td><a href="/{{ article.article_link }}">{{ article.article_title }}</a></td>
 			     <td>{% raw article.article_annotation %}</td>
-			     <td><a href="compose?aid={{ article.article_id }}">{{ _("Edit this wiki") }}</a></td>
+			     <td><a href="compose/{{ article.article_link }}">{{ _("Edit this wiki") }}</a></td>
 			     <td><span class="label label-sm label-success">Approved</span></td>
 			     <td><span class="label label-sm label-success">Approved</span></td>
 			 </tr>
