--- a/templates/personal_dt.html
+++ b/templates/personal_dt.html
@@ -20,7 +20,9 @@
     	<div class="col-lg-12">
               <div class="row">
           <div class="panel panel-yellow">
-              <div class="panel-heading">Список моих статей</div>
+              <div class="panel-heading">Список моих статей &nbsp;&nbsp;&nbsp; 
+              <span class="badge badge-blue"><a style="color: #ffffff;" href="/compose">Написать статью</a></span>
+              			</div>
               <div class="panel-body" id='articles_list_table'>
                   <table class="table table-hover">
   <thead>
