--- a/templates/personal_dt.html
+++ b/templates/personal_dt.html
@@ -21,13 +21,13 @@
               <div class="row">
           <div class="panel panel-yellow">
               <div class="panel-heading">Список моих статей &nbsp;&nbsp;&nbsp; 
-              <span class="badge badge-blue"><a style="color: #ffffff;" href="/compose">Написать статью</a></span>
+              <span class="badge badge-blue"><a style="color: #ffffff;" href="/compose">{{ _("Create new wiki") }}</a></span>
               			</div>
               <div class="panel-body" id='articles_list_table'>
                   <table class="table table-hover">
   <thead>
   <tr>
-      <th>загружаем данные списка статей.</th>
+      <th><img src="/static/images/loading31.gif" alt="" class="img-responsive"/></th>
   </tr>
   </thead>
                   </table>
