--- a/templates/rest/articles_list.html
+++ b/templates/rest/articles_list.html
@@ -21,7 +21,7 @@
 			 <tr>
 			     <td><a href="/{{ article.article_link }}">{{ article.article_title }}</a></td>
 			     <td>{% raw article.article_annotation %}</td>
-			     <td><a href="compose/{{ article.article_link }}">{{ _("Edit this wiki") }}</a></td>
+			     <td> <span class="badge badge-blue"><a style="color: #ffffff;" href="/compose/{{ article.article_link }}">{{ _("Edit this wiki") }}</a></span></td>
 			     <td><span class="label label-sm label-success">Approved</span></td>
 			     <td><span class="label label-sm label-success">Approved</span></td>
 			 </tr>
