рабочий стол группы - измения

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
     <link type="text/css" rel="stylesheet" href="/static/styles/zabuto_calendar.min.css">
     <link type="text/css" rel="stylesheet" href="/static/styles/pace.css">
     <link type="text/css" rel="stylesheet" href="/static/styles/jquery.news-ticker.css">
+
+	<script type="text/javascript" src="{{ static_url("js/jquery-3.1.0.min.js") }}"></script>
+    
 </head>
 <body>
     <div>
