продолжаю делать рабочий стол группы - редактирование статьи для группы - и из групы

--- a/templates/compose.html
+++ b/templates/compose.html
@@ -61,6 +61,8 @@
     {% end %}
     </div>
       <input type="hidden" name="id" value="{{ article.article_id }}"/>
+      <input type="hidden" name="group_id" value="{{ groupId }}"/>
+      
     {% module xsrf_form_html() %}
 
   {% module FilesList( fileList) %}
