получил какую = то неведомую ошибку, ндо откатится и все проверить.

--- a/templates/rest/articles_group_list.html
+++ b/templates/rest/articles_group_list.html
@@ -29,7 +29,7 @@
   {% end %}
  
   {% else %} 
-  	{{ _("Аrticles yet") }}  &nbsp;&nbsp;&nbsp;&nbsp; <a href="/compose?gidp={{group}}"><i class="fa fa-edit fa-fw"></i><span class="menu-title">{{ _("Create new wiki") }}</span></a>
+  	{{ _("Аrticles yet") }}  &nbsp;&nbsp;&nbsp;&nbsp; <a href="/compose?gid={{group}}"><i class="fa fa-edit fa-fw"></i><span class="menu-title">{{ _("Create new wiki") }}</span></a>
   {% end %}
  
                                     
