--- a/templates/personal_dt.html
+++ b/templates/personal_dt.html
@@ -25,93 +25,35 @@
               			</div>
               <div class="panel-body" id='articles_list_table'>
                   <table class="table table-hover">
-  <thead>
-  <tr>
-      <th><img src="/static/images/loading31.gif" alt="" class="img-responsive"/></th>
-  </tr>
-  </thead>
+					  <thead>
+					  <tr>
+					      <th><img src="/static/images/loading31.gif" alt="" class="img-responsive"/></th>
+					  </tr>
+					  </thead>
                   </table>
               </div>
           </div>
           <div class="panel panel-green">
               <div class="panel-heading">Список Всех групп</div>
-              <div class="panel-body">
+              <div class="panel-body" id="all_group_list">
                   <table class="table table-hover table-bordered">
-                      <thead>
-                      <tr>
-                          <th>#</th>
-                          <th>Username</th>
-                          <th>Age</th>
-                          <th>Status</th>
-                      </tr>
-                      </thead>
-                      <tbody>
-                      <tr>
-                          <td>1</td>
-                          <td>Henry</td>
-                          <td>23</td>
-                          <td><span class="label label-sm label-success">Approved</span></td>
-                      </tr>
-                      <tr>
-                          <td>2</td>
-                          <td>John</td>
-                          <td>45</td>
-                          <td><span class="label label-sm label-info">Pending</span></td>
-                      </tr>
-                      <tr>
-                          <td>3</td>
-                          <td>Larry</td>
-                          <td>30</td>
-                          <td><span class="label label-sm label-warning">Suspended</span></td>
-                      </tr>
-                      <tr>
-                          <td>4</td>
-                          <td>Lahm</td>
-                          <td>15</td>
-                          <td><span class="label label-sm label-danger">Blocked</span></td>
-                      </tr>
-                      </tbody>
+                  <thead>
+					  <tr>
+					      <th><img src="/static/images/loading31.gif" alt="" class="img-responsive"/></th>
+					  </tr>
+					  </thead>
                   </table>
               </div>
           </div>
           <div class="panel panel-red">
               <div class="panel-heading">Список Авторов</div>
-              <div class="panel-body">
+              <div class="panel-body" id="all_user_list">
                   <table class="table table-hover table-bordered">
                       <thead>
-                      <tr>
-                          <th>#</th>
-                          <th>Column</th>
-                          <th>Column</th>
-                          <th>Column</th>
-                      </tr>
+					  <tr>
+					      <th><img src="/static/images/loading31.gif" alt="" class="img-responsive"/></th>
+					  </tr>
                       </thead>
-                      <tbody>
-                      <tr class="active">
-                          <td>1</td>
-                          <td>active</td>
-                          <td>active</td>
-                          <td>active</td>
-                      </tr>
-                      <tr class="success">
-                          <td>2</td>
-                          <td>success</td>
-                          <td>success</td>
-                          <td>success</td>
-                      </tr>
-                      <tr class="warning">
-                          <td>3</td>
-                          <td>warning</td>
-                          <td>warning</td>
-                          <td>warning</td>
-                      </tr>
-                      <tr class="danger">
-                          <td>4</td>
-                          <td>danger</td>
-                          <td>danger</td>
-                          <td>danger</td>
-                      </tr>
-                      </tbody>
                   </table>
               </div>
           </div>
@@ -138,6 +80,13 @@
 	      $.ajax({url: "/rest/getPersonalArticlesList/0", success: function(result){
 	          $("#articles_list_table").html(result);
 	      }});
+	      $.ajax({url: "/rest/getAllGroupList/0", success: function(result){
+	          $("#all_group_list").html(result);
+	      }});
+	      $.ajax({url: "/rest/getAllAuthorList/0", success: function(result){
+	          $("#all_user_list").html(result);
+	      }});
+	      
 	});
      
 </script>
