убрал "рест" вызовы на персональном абочем столе, так надо сделать все

--- a/templates/base.html
+++ b/templates/base.html
@@ -85,18 +85,18 @@
         <!--END TOPBAR-->
         <div id="wrapper">
             <!--BEGIN SIDEBAR MENU-->
-                       {%  include "menu.html" %}
+                        {% include "menu.html" %} 
             <div id="page-wrapper">
                 <!--BEGIN TITLE & BREADCRUMB PAGE-->
                 <div id="title-breadcrumb-option-demo" class="page-title-breadcrumb">
                     <div class="page-header pull-left">
                         <div class="page-title">
-                            {{ page_name }}</div>
+                            {{ parameters.page_name }}</div>
                     </div>
                     <ol class="breadcrumb page-breadcrumb pull-right">
                         <li><i class="fa fa-home"></i>&nbsp;<a href="/">Home</a>&nbsp;&nbsp;<i class="fa fa-angle-right"></i>&nbsp;&nbsp;</li>
-                        <li class="hidden"><a href="#">{{ page_name }}</a>&nbsp;&nbsp;<i class="fa fa-angle-right"></i>&nbsp;&nbsp;</li>
-                        <li class="active">{{ page_name }}</li>
+                        <li class="hidden"><a href="#">{{ parameters.page_name }}</a>&nbsp;&nbsp;<i class="fa fa-angle-right"></i>&nbsp;&nbsp;</li>
+                        <li class="active">{{ parameters.page_name }}</li>
                     </ol>
                     <div class="clearfix">
                     </div>
