--- a/templates/rest/articles_list.html
+++ b/templates/rest/articles_list.html
@@ -1,8 +1,6 @@
 <!-- articles_list.html -->
 
-<div class="article">
- 
-   {% if len(articles) > 0 %}
+   {% if len(parameters.articlesList) > 0 %}
  
 	 <table class="table table-hover">
 	     <thead>
@@ -16,7 +14,7 @@
 	     </thead>
 	     <tbody>
                                     
-  {% for article in articles %}
+  {% for article in parameters.articlesList %}
 			
 			 <tr>
 			     <td><a href="/{{ article.article_link }}">{{ article.article_title }}</a></td>
